--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,8 +1,8 @@
 <fragment
-    android:name="com.example.android.quakereport.SettingsActivity$EarthquakePreferenceFragment"
+    android:name="com.kewlala.guard_duty.SettingsActivity$NewsReaderPreferenceFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.quakereport.SettingsActivity">
+    tools:context="com.kewlala.guard_duty.SettingsActivity">
 </fragment>
