--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,7 +59,7 @@
     <!-- Text color for the details of the earthquake in the list item -->
     <color name="textColorEarthquakeDetails">#B4BAC0</color>
 
-    <!-- Text color for the primary location of the earthquake in the list item -->
+    <!-- Text color for the primauthortion of the earthquake in the list item -->
     <color name="textColorEarthquakeLocation">#2B3D4D</color>
 
 </resources>
