fix layout issues

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
     <style name="quake_list_root_layout">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:orientation">horizontal</item>
+        <item name="android:orientation">vertical</item>
         <item name="android:background">@color/colorListBackground</item>
     </style>
 
@@ -47,11 +47,11 @@
         <item name="android:dividerHeight">0dp</item>
     </style>
 
-    <style name="news_list_two_columns">
+    <style name="news_list_columns">
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingBottom">8dp</item>
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_weight">4</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
@@ -72,10 +72,6 @@
     <style name="style_date_time_text" parent="style_quake_list_item_normal_text">
         <item name="android:layout_gravity">right</item>
         <item name="android:paddingRight">16dp</item>
-    </style>
-
-    <style name="style_quake_list_item_direction" parent="style_quake_list_item_normal_text">
-        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="style_section_name">
