--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,21 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/quake_list_root_layout">
 
-    <TextView
-        android:id="@+id/section_name"
-        style="@style/style_section_name" />
-
-    <!-- show the title of the article-->
-    <LinearLayout style="@style/news_list_one_row">
+    <LinearLayout style="@style/news_list_columns">
 
         <TextView
+            android:id="@+id/section_name"
+            style="@style/style_section_name" />
+
+        <!-- show the title of the article-->
+        <TextView
             android:id="@+id/text_view_news_article_title"
-            style="@style/style_quake_list_item_direction" />
+            style="@style/style_quake_list_item_normal_text" />
 
     </LinearLayout>
 
     <!-- show the date and time in two rows -->
-    <LinearLayout style="@style/news_list_two_columns">
+    <LinearLayout style="@style/news_list_columns">
 
         <TextView
             android:id="@+id/text_view_article_date"
