--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -7,13 +7,19 @@
             android:id="@+id/section_name"
             style="@style/style_section_name" />
 
-        <!-- show the title of the article-->
-        <TextView
-            android:id="@+id/text_view_news_article_title"
-            style="@style/style_quake_list_item_normal_text" />
+        <LinearLayout style="@style/quake_list_root_layout">
 
+            <TextView
+                android:id="@+id/section_name_full"
+                style="@style/style_quake_list_item_normal_text" />
+
+            <!-- show the title of the article-->
+            <TextView
+                android:id="@+id/text_view_news_article_title"
+                style="@style/style_quake_list_item_darker_text" />
+
+        </LinearLayout>
     </LinearLayout>
-
     <!-- show the date and time in two rows -->
     <LinearLayout style="@style/news_list_columns">
 
@@ -28,5 +34,7 @@
         <TextView
             android:id="@+id/text_view_article_author"
             style="@style/style_date_time_text" />
+
     </LinearLayout>
+
 </LinearLayout>
